--- a/src/RedisReact/RedisReact/css/app.css
+++ b/src/RedisReact/RedisReact/css/app.css
@@ -49,7 +49,7 @@ h1 {
 #formConnection h2 {
     margin: 0 0 40px 0;
 }
-#formConnection  input {
+#formConnection input {
     margin: 0 10px;
 }
 #formConnection #txtHost {
@@ -63,6 +63,9 @@ h1 {
 }
 #formConnection .actions {
     margin: 20px 0;
+}
+#formConnection #btnDelete {
+    margin: 0 10px;
 }
 .loader {
     visibility: hidden;
@@ -155,6 +158,10 @@ body.search-active, body.search-active .navbar {
     text-align: center;
     margin: 70px 0 0 0;
 }
+#connections-page .content {
+    text-align: left;
+}
+
 #formSearch {
     background: #f5f5f5;
     border-radius: 2px;
