--- a/src/RedisReact/RedisReact/css/app.css
+++ b/src/RedisReact/RedisReact/css/app.css
@@ -64,8 +64,8 @@ h1 {
 #formConnection .actions {
     margin: 20px 0;
 }
-#formConnection #btnDelete {
-    margin: 0 10px;
+#connections-page .btn {
+    margin: 0 10px 0 0;
 }
 .loader {
     visibility: hidden;
